--- a/src/main/resources/template/Dao.java.vm
+++ b/src/main/resources/template/Dao.java.vm
@@ -1,9 +1,7 @@
 package ${daoPackage};
 
 import ${poPackage}.${className};
-import com.baomidou.mybatisplus.mapper.BaseMapper;
-import org.apache.ibatis.annotations.Mapper;
-
+import java.util.List;
 /**
  * ${comments}
  * @date ${datetime}
@@ -12,40 +10,40 @@ public interface ${className}Dao{
 
     /**
      * 根据主键查询单个
-     * @param entity
+     * @param ${classname}
      * @return ${className}
      */
-        ${className} query${className}ByPrimaryKey(${className} ${classname});
+    ${className} query${className}ByPrimaryKey(${className} ${classname});
 
     /**
      * 根据条件查询单个
-     * @param entity
+     * @param ${classname}
      * @return ${className}
      */
-        ${className} query${className}Info(${className} ${classname});
+    ${className} query${className}Info(${className} ${classname});
 
     /**
      * 根据条件查询集合
-     * @param entity
+     * @param ${classname}
      * @return List<${className}>
      */
     List<${className}> query${className}List(${className} ${classname});
 
     /**
      * 添加单个
-     * @param entity
+     * @param ${classname}
      */
     void add${className}Info(${className} ${classname});
 
     /**
      * 根据主键修改单个
-     * @param entity
+     * @param ${classname}
      */
     void update${className}ByPrimaryKey(${className} ${classname});
 
     /**
      * 根据主键删除单个
-     * @param entity
+     * @param ${classname}
      */
     void  delete${className}ByPrimaryKey(${className} ${classname});
 }
