--- a/src/main/resources/template/Entity.java.vm
+++ b/src/main/resources/template/Entity.java.vm
@@ -1,8 +1,9 @@
-package ${package}.${moduleName}.entity;
-
-
+package ${poPackage};
 #if(${hasBigDecimal})
 import java.math.BigDecimal;
+#end
+#if(${hasTimestamp})
+import java.sql.Timestamp
 #end
 import java.io.Serializable;
 import java.util.Date;
