--- a/src/main/resources/views/index.html
+++ b/src/main/resources/views/index.html
@@ -27,9 +27,9 @@
   <header class="main-header">
     <a href="javascript:void(0);" class="logo">
       <!-- mini logo for sidebar mini 50x50 pixels -->
-      <span class="logo-mini"><b>坦克</b></span>
+      <span class="logo-mini"><b></b></span>
       <!-- logo for regular state and mobile devices -->
-      <span class="logo-lg"><b>坦克代码生成器</b></span>
+      <span class="logo-lg"><b>代码生成器</b></span>
     </a>
     <!-- Header Navbar: style can be found in header.less -->
     <nav class="navbar navbar-static-top" role="navigation">
@@ -37,7 +37,7 @@
       <a href="#" class="sidebar-toggle" data-toggle="offcanvas" role="button">
         <span class="sr-only">Toggle navigation</span>
       </a>
-	  <div style="float:left;color:#fff;padding:15px 10px;">坦克</div>
+	  <div style="float:left;color:#fff;padding:15px 10px;"></div>
       <div class="navbar-custom-menu">
         //
       </div>
@@ -88,7 +88,6 @@
     <div class="pull-right hidden-xs">
       Version 1.0.0
     </div>
-    Copyright &copy; 2017 <a href="http://www.renren.io" target="_blank">renren.io</a> All Rights Reserved
   </footer>
 
   <!-- Add the sidebar's background. This div must be placed
